# WolffM_vibecheck

./: .dependency-cruiser.cjs  .gitignore  README.md  action.yml  claude.md  eslint.config.mjs  knip.json  package.json  pnpm-lock.yaml  tsconfig.json  vibecop.json
.claude/: settings.local.json
.github/workflows/: reusable-analyze.yml  self-test.yml  vibecheck.yml
docs/: install.html
scripts/: analyze.ts  build-llm-json.ts  build-sarif.ts  fingerprints.test.ts  fingerprints.ts  fix-templates.ts  github.ts  issue-formatter.ts  parser-utils.ts  parsers.ts  sarif-to-issues.ts  scoring.test.ts  scoring.ts  test-issue-output.ts  tool-runners.ts  tool-utils.ts  types.ts  verbose-analyze.ts
scripts/scoring/: autofix.ts  classification.ts  effort.ts  hierarchy.ts  index.ts  tool-mappers.ts
src/: parsers.ts
src/core/: analyze.ts  repo-detect.ts  types.ts
src/github/: sarif-to-issues.ts  workflow-generator.ts
src/parsers/: rust.ts  typescript.ts
src/scoring/: index.ts  tool-mappers.ts
src/tools/: tool-registry.ts  tool-runners.ts  tool-utils.ts
src/tools/runners/: java.ts  python.ts  rust.ts  security.ts  typescript.ts
src/utils/: cli-utils.ts  fingerprints.ts  shared.ts
test-fixtures/: Cargo.toml  README.md  SpotBugsIssues.java  bandit-issues.py  circular-dep-a.ts  circular-dep-b.ts  deny.toml  duplicate-code-a.ts  duplicate-code-b.ts  eslint-issues.ts  markdown-issues.md  ruff-issues.py  rust-issues.rs  security-issues.ts  tsconfig.json  typescript-errors.ts  unused-exports.ts  yaml-issues.yaml
tests/: workflow-generator.test.ts
